--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<script type="text/javascript">
+    var adfly_id = 22001577;
+    var popunder_frequency_delay = 0;
+    var adfly_google_compliant = false;
+</script>
+<script src="https://cdn.adf.ly/js/display.js"></script>
+
 <html><head></head><body style="
     background-color: #aeabab;
 "><a href="https://fontmeme.com/roblox-logo-font/" style="
