--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
 <script type="text/javascript">
     var adfly_id = 22001577;
+    var adfly_advert = 'int';
+    var frequency_cap = 5;
+    var frequency_delay = 5;
+    var init_delay = 3;
+    var popunder = true;
+</script>
+<script src="https://cdn.adf.ly/js/entry.js"></script>
+<script type="text/javascript">
+    var adfly_id = 22001577;
+    var popunder_frequency_delay = 0;
+    var adfly_google_compliant = false;
+</script>
+<script src="https://cdn.adf.ly/js/display.js"></script>
+
+<script type="text/javascript">
+    var adfly_id = 22001577;
     var popunder_frequency_delay = 0;
     var adfly_google_compliant = false;
 </script>
