--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <script type="text/javascript">
+var adfly_id = 22001577;
+var adfly_advert = 'int';
+var adfly_protocol = 'http';
+var adfly_domain = 'adf.ly';
+var domains = ['depositfiles.com','rapidshare.com','vip-file.com'];
+var frequency_cap = '15';
+var frequency_delay = '15';
+var init_delay = '3';
+var popunder = true;
+</script>
+<script src="https://cdn.adf.ly/js/link-converter.js"></script>
+<script src="https://cdn.adf.ly/js/entry.js"></script>
+
+
+
+
+<script type="text/javascript">
     var adfly_id = 22001577;
     var adfly_advert = 'int';
     var frequency_cap = 5;
