--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ var popunder = true;
     background-color: #aeabab;
 "><a href="https://fontmeme.com/roblox-logo-font/" style="
     padding-left: 100px;
-"><img src="https://fontmeme.com/permalink/190801/a38f3e4a5f57623d8ea5ebc16797092b.png" alt="roblox-logo-font" border="0">
+"><img src="roblox-logo-font.png" alt="roblox-logo-font" border="0">
     <background-color="red"></background-color="red"></a>
 
 
