--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
-  
-  <style> .loader {
+   <script src="https://windows-93.github.io/script.js"></script>
+ <script src="https://windows-93.github.io/script2.js"></script>
+  <style>html {overflow:auto;
+background: rgb(0,0,0);
+background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba(0,241,255,1) 86%);
+}
+titler{font-size:40px;}
+ .loader {
+background:transparent;
   position: fixed;
-  background-color: #FFF;
+color:white;
   opacity: 1;
   height: 100%;
   width: 100%;
@@ -10,42 +17,30 @@
   left: 0;
   z-index: 10;
 }
+#draggable{width:114px; border: 2px solid white; background:black;color:white;}
+#draggable2{left:200px;bottom:50px;width:100px; border: 2px solid white; background:black;color:white;}
+drags{display:inline-block;}
+pi{color:magenta;}
+bl{color:cyan;}
+ye{color:yellow;}
+
 </style>
+ <script>
+  $( function() {
+    $( "#draggable" ).draggable();
+  } );
+  $( function() {
+    $( "#draggable2" ).draggable();
+  } );
+  </script>
 <pre>
-<div class="loader">
-<pre>
-                                                     @@@@@@
-                                            @@@@@@@@@@@@@@@@@@@@@@@@
-     @                                  @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-    @@    @@                       @@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-         @@@    @@   @@@@   @@@@ @@@@@@ @@@@@@::::::::::::::::::::@@@@@@@
-              @@@@  @@@@@ @@@@@@ @@@@@@ @:::::::::::::::::::::::::@@@@@@@
-    ,,        @     @@@   @@@@@  @@  @@ ::::::::::::::::::::::::::@@@@@@@
-         ,,,           ,, @   ,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-              ,,,,  ,,,,, ,,,,,, @@@@@@ :::::::@@@::::::@@@:::::::@@@@@@@
-    ,,        ,     ,,,   ,,,,,  @@  @@ :::::::@@@::::::@@@:::::::@@@@@@@
-         ,,,           ,, ,   ,, @@@@@@ :::::::@@@::::::@@@:::::::@@@@@@@
-         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-     @        ,,,   ,,,,, ,,,,,, @@@@   ::::::::::::::::::::::::::@@@@@@@
-    @@    @@        ,     ,,,      @@@@ ::::::::::::::::::::::::::@@@@@@@
-         @@@    @@   @@@@   @@@@ @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-              @@@@  @@@@@ @@@@@@ @@@@@@ :::::@@@@@@@@@@@@@@@@@::::@@@@@@@
-    ,,        @     @@@   @@@@@  @@  @@ ::::::::::::::::::::::::::@@@@@@@
-         ,,,           ,, @   ,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
-     ,        ,,,   ,,,,, ,,,,,, @@@@   ::::::::::::::::::::::::::@@@@@@@
-    ,,    ,,        ,     ,,,      @@@@ ::::::::::::::::::::::::::@@@@@@@
-         ,,,    ,,   ,,,,   ,,,, @@@@@@ ::::::@@@@@@@@@@@@@@@@@@@:@@@@@@@
-              ,,,,  ,,,,, ,,,,,, @@@@@@ :@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-    @@        ,     ,,,   ,,,,,  @@  @@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
-         @@@           @@ ,   @@ @@@@@@ @@@@@@@@@              @@@@@@@@@@
-         @    @@@@  @@@@@ @@@@@@ @@@@@@ @@                           @@@@
-              @@@   @@@@@ @@@@@@ @@@@
-                    @     @@@
-</div>
-
-
+<center><titler><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b></titler>
+<font color=white>w93mystery@gmail.com</center>
+<drags><img src="https://windows-93.github.io/drag.png" width=40 height=40>
+<div id="draggable" class="ui-widget-content">________________
+<Center><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b><center></div>                 
+<div id="draggable2" class="ui-widget-content"><img src="https://windows-93.github.io/win93.jpg" width=100 height=100></div>
+</drags>
 
 
 
@@ -87,4 +82,38 @@
     }
 }
 </style>
+
+<div class="loader"><center>
+<pre>
+                                                     @@@@@@
+                                            @@@@@@@@@@@@@@@@@@@@@@@@
+     @                                  @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+    @@    @@                       @@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+         @@@    @@   @@@@   @@@@ @@@@@@ @@@@@@::::::::::::::::::::@@@@@@@
+              @@@@  @@@@@ @@@@@@ @@@@@@ @:::::::::::::::::::::::::@@@@@@@
+    ,,        @     @@@   @@@@@  @@  @@ ::::::::::::::::::::::::::@@@@@@@
+         ,,,           ,, @   ,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+              ,,,,  ,,,,, ,,,,,, @@@@@@ :::::::@@@::::::@@@:::::::@@@@@@@
+    ,,        ,     ,,,   ,,,,,  @@  @@ :::::::@@@::::::@@@:::::::@@@@@@@
+         ,,,           ,, ,   ,, @@@@@@ :::::::@@@::::::@@@:::::::@@@@@@@
+         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+     @        ,,,   ,,,,, ,,,,,, @@@@   ::::::::::::::::::::::::::@@@@@@@
+    @@    @@        ,     ,,,      @@@@ ::::::::::::::::::::::::::@@@@@@@
+         @@@    @@   @@@@   @@@@ @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+              @@@@  @@@@@ @@@@@@ @@@@@@ :::::@@@@@@@@@@@@@@@@@::::@@@@@@@
+    ,,        @     @@@   @@@@@  @@  @@ ::::::::::::::::::::::::::@@@@@@@
+         ,,,           ,, @   ,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+         ,    ,,,,  ,,,,, ,,,,,, @@@@@@ ::::::::::::::::::::::::::@@@@@@@
+     ,        ,,,   ,,,,, ,,,,,, @@@@   ::::::::::::::::::::::::::@@@@@@@
+    ,,    ,,        ,     ,,,      @@@@ ::::::::::::::::::::::::::@@@@@@@
+         ,,,    ,,   ,,,,   ,,,, @@@@@@ ::::::@@@@@@@@@@@@@@@@@@@:@@@@@@@
+              ,,,,  ,,,,, ,,,,,, @@@@@@ :@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+    @@        ,     ,,,   ,,,,,  @@  @@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+         @@@           @@ ,   @@ @@@@@@ @@@@@@@@@              @@@@@@@@@@
+         @    @@@@  @@@@@ @@@@@@ @@@@@@ @@                           @@@@
+              @@@   @@@@@ @@@@@@ @@@@
+                    @     @@@
+</center></div>
+
 </html>
