--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 background: rgb(0,0,0);
 background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba(0,241,255,1) 86%);
 }
+counter{background:white; border:2px solid black; height:100px;}
 titler{font-size:40px;}
  .loader {
 background:transparent;
@@ -82,7 +83,7 @@ ye{color:yellow;}
     }
 }
 </style>
-
+<counter><img width:100px height=10px src="https://hitwebcounter.com/counter/counter.php?page=7709886&style=0024&nbdigits=3&type=ip&initCount=0" title="count" Alt="count"   border="0" /></a></counter>
 <div class="loader"><center>
 <pre>
                                                      @@@@@@
@@ -115,5 +116,4 @@ ye{color:yellow;}
               @@@   @@@@@ @@@@@@ @@@@
                     @     @@@
 </center></div>
-
 </html>
