--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html onselectstart="return false">
    <title>WINDOWS93</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -6,10 +6,11 @@
 <link rel="manifest" href="/site.webmanifest">
    <script src="https://windows-93.github.io/script.js"></script>
  <script src="https://windows-93.github.io/script2.js"></script>
-  <style>html {overflow:hidden;
+  <style>html {overflow:auto;
 background: rgb(0,0,0);
 background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba(0,241,255,1) 86%);
 }
+
 #wrapcube {
     width: 250px;
     height: 213px;
@@ -111,7 +112,7 @@ drags{display:inline-block;}
 pi{color:magenta;}
 bl{color:cyan;}
 ye{color:yellow;}
-
+button{border:3px solid black;font-family:monospace;display:inline-block;background:white;}
 </style>
  <script>
   $( function() {
@@ -124,17 +125,23 @@ ye{color:yellow;}
 <pre>
 <center><titler><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b></titler>
 <font color=white>w93mystery@gmail.com</font></center>
-<drags><img src="https://windows-93.github.io/drag.png" width=40 height=40>
+<drags><font color=white>(draggable)</font>
+
 <div id="draggable" class="ui-widget-content">________________
 <Center><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b><center></div>                 
-<div id="draggable2" class="ui-widget-content"><img src="https://windows-93.github.io/win93.jpg" width=100 height=100></div></drags></pre><div id="wrapcube">
-	<div id="D3Cube">
+<div id="draggable2" class="ui-widget-content"><img src="https://windows-93.github.io/win93.jpg" width=100 height=100></div></drags></pre>
+<div id="wrapcube">
+<a href="#"><button><img src="https://windows-93.github.io/cool.png" width=50 height=40"></img><br>Click here!
+
+</button></a>
+
+
+<div id="D3Cube">
 		<div id="side1"></div>
 		<div id="side2"></div>
 		<div id="side3"></div>
-<div id="side4"><pre><center>WINDOWS93
-
-..or is it?</center></pre></div>
+<div id="side4"><pre><center>O .  T .  C  .
+</center></pre></div>
 		<div id="side5"></div>
 		<div id="side6"></div>
 	</div>
