--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ button{border:3px solid black;font-family:monospace;display:inline-block;backgro
 <Center><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b><center></div>                 
 <div id="draggable2" class="ui-widget-content"><img src="https://windows-93.github.io/win93.jpg" width=100 height=100></div></drags></pre>
 <div id="wrapcube">
-<a href="#"><button><img src="https://windows-93.github.io/cool.png" width=50 height=40"></img><br>Click here!
+<a href="shutdown"><button><font color=red><b><img src="https://windows-93.github.io/cool.png" width=50 height=40"></img><br>INITIATE<br>SHUTDOWN</font></b>
 
 </button></a>
 
