--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html onselectstart="return false">
    <title>WINDOWS93</title>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -11,88 +12,7 @@ background: rgb(0,0,0);
 background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba(0,241,255,1) 86%);
 }
 
-#wrapcube {
-    width: 250px;
-    height: 213px;
-    margin: 20px auto;
-}
-#D3Cube {
-    width: 112px;
-    height: 112px;
-    top: 50px;
-    transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transform: rotateX(-360deg) rotateY(-38deg) rotateZ(0deg);
-    -moz-transform: rotateX(-360deg) rotateY(-38deg) rotateZ(0deg);
-    -webkit-transform: rotateX(-360deg) rotateY(-38deg) rotateZ(0deg);
-    margin: auto;
-    position: relative;
-    -moz-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-animation: cubeRotation 1s infinite; /* Safari 4.0 - 8.0 */
-    animation: cubeRotation 1s infinite;
-}
-/* Safari 4.0 - 8.0 */
-@-webkit-keyframes cubeRotation {
-    100%   {	-webkit-transform: rotateX(-360deg) rotateY(-38deg) rotateZ(0deg);	}
-    100%   {	-webkit-transform: rotateX(-360deg) rotateY(-128deg) rotateZ(0deg);	}
-    100%   {	-webkit-transform: rotateX(-360deg) rotateY(-398deg) rotateZ(0deg);	}
-}
-/* Standard syntax */
-@keyframes cubeRotation {
-    100%   {	transform: rotateX(-360deg) rotateY(-38deg) rotateZ(0deg);	}
-    100%   {	transform: rotateX(-360deg) rotateY(-238deg) rotateZ(0deg);	}
-    100%   {	transform: rotateX(-360deg) rotateY(-398deg) rotateZ(0deg);	}
-}
-#D3Cube > div {
-    position: absolute;
 
-    width: 112px;
-    height: 112px;
-    float: left;
-    overflow: hidden;
-	opacity: 0.85;
-}
-#side1 {
-    transform: rotatex(90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: rotatex(90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: rotatex(90deg) translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-}
-#side2 {
-    transform: rotateY(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: rotateY(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: rotateY(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-}
-#side3 {
-    transform: translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-}
-#side4 {
-    transform: rotateY(90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: rotateY(90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: rotateY(90deg) translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-color:white;
-}
-#side5 {
-    transform: rotateY(180deg) translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: rotateY(180deg) translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: rotateY(180deg) translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-}
-#side6 {
-    transform: rotateX(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -moz-transform: rotateX(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-    -webkit-transform: rotateX(-90deg) translateX(0px) translateY(0px) translateZ(56px);
-	background-color: black;
-}
-
-side2 and side4 missing on purpose
 counter{background:white; border:2px solid black; height:100px;}
 titler{font-size:40px;}
  .loader {
@@ -107,8 +27,9 @@ color:white;
   z-index: 10;
 }
 #draggable{width:114px; border: 2px solid white; background:black;color:white;}
-#draggable2{left:200px;bottom:50px;width:100px; border: 2px solid white; background:black;color:white;}
-drags{display:inline-block;}
+#draggable2{width:100px; border: 2px solid white; background:black;color:white;}
+
+drags{display:inline; float:left;}
 pi{color:magenta;}
 bl{color:cyan;}
 ye{color:yellow;}
@@ -131,21 +52,12 @@ button{border:3px solid black;font-family:monospace;display:inline-block;backgro
 <Center><b><ye>WINDOWS</ye><pi>9</pi><bl>3</bl></b><center></div>                 
 <div id="draggable2" class="ui-widget-content"><img src="https://windows-93.github.io/win93.jpg" width=100 height=100></div></drags></pre>
 <div id="wrapcube">
-<a href="shutdown"><button><font color=red><b><img src="https://windows-93.github.io/cool.png" width=50 height=40"></img><br>INITIATE<br>SHUTDOWN</font></b>
+<a href="shutdown"><button><b><img src="https://windows-93.github.io/cool.png" width=50 height=40"></img><br>click to<font color=red><br>INITIATE<br>SHUTDOWN</font></b>
 
 </button></a>
 
 
-<div id="D3Cube">
-		<div id="side1"></div>
-		<div id="side2"></div>
-		<div id="side3"></div>
-<div id="side4"><pre><center>O .  T .  C  .
-</center></pre></div>
-		<div id="side5"></div>
-		<div id="side6"></div>
-	</div>
-</div><pre>
+<pre>
 
 
 
