--- a/shutdown.html
+++ b/shutdown.html
@@ -1,3 +1,4 @@
+
 <title>SHUTDOWN</title>
 <Style>
 /*! 98.css v0.1.16 - https://github.com/jdan/98.css */
@@ -573,11 +574,11 @@ summary:focus {
     </div>
   </div>
   <div class="window-body">
-    <pre> O/ please enter your
-/|  passkey to initiate
-/ \     shutdown.
+    <pre> O/ please select "submit"
+/|  to initiate the
+/ \ shutdown process.
 <Center><input id="text17" type="text" />
 
-<button formaction="shutdown.php">submit</button></pre>
+<a href="shutdown_"><button>submit</button></a></pre>
   </div>
 </div>
