--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 
 <html onselectstart="return false">
    <title>WINDOWS93</title>
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" href="favicon.ico">
 <link rel="manifest" href="/site.webmanifest">
    <script src="https://windows-93.github.io/script.js"></script>
  <script src="https://windows-93.github.io/script2.js"></script>
