--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@ button{border:3px solid black;font-family:monospace;display:inline-block;backgro
 </style><center><div class="loader">
 <img src="https://windows-93.github.io/win93.jpg">
 <b><font size=10>WINDOWS 93</font></b>
-<b><font size=5 color=red>ERROR</font></b>
-</div>
-<counter><img width:100px height=10px src="https://hitwebcounter.com/counter/counter.php?page=7709886&style=0024&nbdigits=3&type=ip&initCount=0" title="count" Alt="count"   border="0"/></a></counter>
+<b><font size=5 color=red>ERROR</font><font size=5> : MISSING<font color=yellow> C:/SYS41</font></font></b>
+</div><counter><img width:100px height=10px src="https://hitwebcounter.com/counter/counter.php?page=7709m886&style=0024&nbdigits=3&type=ip&initCount=0" title="count" Alt="count"   border="0"/></a></counter>
 
 </html>
