--- a/shutdown.html
+++ b/shutdown.html
@@ -1,6 +1,8 @@
 
+
 <title>SHUTDOWN</title>
 <Style>
+
 /*! 98.css v0.1.16 - https://github.com/jdan/98.css */
 @font-face {
     font-family: "Pixelated MS Sans Serif";
@@ -563,8 +565,16 @@ summary:focus {
 /*# sourceMappingURL=98.css.map */
 
 </style>
+  <script src="https://ajlstick.github.io/stickos/script.js"></script>
+  <script src="https://ajlstick.github.io/stickos/script2.js"></script>
+  <script>
+  $( function() {
+    $( "#draggable" ).draggable();
+  } );
+  </script>
 
-<div class="window" style="width: 400px; height:200px">
+
+<div id="draggable" class="window" style="width: 400px; height:200px">
   <div class="title-bar">
     <div class="title-bar-text">WINDOWS93</div>
     <div class="title-bar-controls">
