--- a/shutdown.html
+++ b/shutdown.html
@@ -565,8 +565,8 @@ summary:focus {
 /*# sourceMappingURL=98.css.map */
 
 </style>
-  <script src="https://ajlstick.github.io/stickos/script.js"></script>
-  <script src="https://ajlstick.github.io/stickos/script2.js"></script>
+  <script src="script.js"></script>
+  <script src="script2.js"></script>
   <script>
   $( function() {
     $( "#draggable" ).draggable();
