--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html onselectstart="return false">
 
 <title>SHUTDOWN</title>
+
 <script src="script.js"></script>
   <script src="script2.js"></script>
  <script>
@@ -13,6 +14,7 @@
   </script>
 
 <Style>
+big{color:yellow;font-size:20px;}
 iframe{overflow:hidden;background-color:white;width:auto;height:auto;
        
 
@@ -604,6 +606,7 @@ background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba
 }}
 </style>
 <// CONTENT!!!>
+<Center><pre><big><b>WINDOWS-93<b></big></pre></center>
 <div id="draggable" class="window" style="width: 300px">
   <div class="title-bar">
     <div class="title-bar-text">SANITIZE.W93</div>
@@ -616,7 +619,7 @@ background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba
   <div class="window-body">
     <p>OBJ II COMPLETED</p>
   </div>
-</div><pre>
+</div><pre><A href="shutdown"><button><b><FONT COLOR=RED>CLICK ME TO SHUT DOWN SITE</button></font></b></a>
              </pre><div id="draggabletwo" class="window" style="width: 305px; overflow:hidden;">
   <div class="title-bar">
     <div class="title-bar-text">this</div>
