--- a/index.html
+++ b/index.html
@@ -617,9 +617,10 @@ background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(25,0,255,1) 48%, rgba
     </div>
   </div>
   <div class="window-body">
-    <p>OBJ II COMPLETED</p>
+    <p>
+   II COMPLETE</p>
   </div>
-</div><pre><A href="shutdown"><button><b><FONT COLOR=RED>CLICK ME TO SHUT DOWN SITE</button></font></b></a>
+</div><pre><A href="shutdown"><button><b><FONT COLOR=RED>CLICK ME TO ^&@%%#<#</button></font></b></a>
              </pre><div id="draggabletwo" class="window" style="width: 305px; overflow:hidden;">
   <div class="title-bar">
     <div class="title-bar-text">this</div>
