--- a/shutdown.html
+++ b/shutdown.html
@@ -584,9 +584,9 @@ summary:focus {
     </div>
   </div>
   <div class="window-body">
-    <pre> O/ please select "submit"
-/|  to initiate the
-/ \ shutdown process.
+    <pre> please select "submit"
+)  to initiate the
+8 6 1 shutdown process.
 <Center><input id="text17" type="text" />
 
 <a href="shutdown_"><button>submit</button></a></pre>
